force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/KimbleOne__UsageBehaviourRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Usage Behaviour Rule</label>
    <nameField>
        <label>Usage Behaviour Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Behaviour Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>