force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__AssignmentModellingDisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentModellingDisplaySequence__c</fullName>
    <label>Assignment Modelling Display Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>