force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__CanAdjustUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanAdjustUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Adjust Usage</label>
    <type>Checkbox</type>
</CustomField>