force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__CanProfileUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanProfileUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Profile Usage</label>
    <type>Checkbox</type>
</CustomField>