force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__EntrySpecification__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntrySpecification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entry Specification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentEntrySpecification</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Usage Behaviour Rules</relationshipLabel>
    <relationshipName>Usage_Behaviour_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>