force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__IsActualUsageOnly__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsActualUsageOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActualUsageOnly</label>
    <type>Checkbox</type>
</CustomField>