force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__IsScheduledUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsScheduledUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Scheduled Usage</label>
    <type>Checkbox</type>
</CustomField>