force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveProfileOnStartDateChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveProfileOnStartDateChange__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Preserve Profile On Start Date Change</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PreserveProfileOnStartDateChange</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Usage Behaviour Rules Preserve Profile</relationshipLabel>
    <relationshipName>Usage_Behaviour_Rules_Preserve_Profil</relationshipName>
    <type>Lookup</type>
</CustomField>