force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveRevenueOnActualisation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveRevenueOnActualisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Revenue On Actualisation</label>
    <type>Checkbox</type>
</CustomField>