force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveScheduledUsageOnEndDateChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveScheduledUsageOnEndDateChange__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Preserve Sched Days On End Date Change</label>
    <type>Checkbox</type>
</CustomField>