force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveScheduledUsageOnStartDateChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveScheduledUsageOnStartDateChange__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Preserve Sched Days On Start Date Change</label>
    <type>Checkbox</type>
</CustomField>