force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageIfUnforecastable__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageIfUnforecastable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Usage If Unforecastable</label>
    <type>Checkbox</type>
</CustomField>