force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageLowerTolerance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageLowerTolerance__c</fullName>
    <label>Preserve Usage Lower Tolerance</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>