force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageMaximumUsagePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageMaximumUsagePercentage__c</fullName>
    <label>Preserve Usage Maximum Usage Pct</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>