force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageOnActualisation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageOnActualisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Usage On Actualisation</label>
    <type>Checkbox</type>
</CustomField>