force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageOnResourceChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageOnResourceChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Usage On Resource Change</label>
    <type>Checkbox</type>
</CustomField>