force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageOnScheduleChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageOnScheduleChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Usage On Schedule Change</label>
    <type>Checkbox</type>
</CustomField>