force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageOnUnavailabilityChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageOnUnavailabilityChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Usage On Unavailability Change</label>
    <type>Checkbox</type>
</CustomField>