force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageProfile__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Preserve Usage Profile</label>
    <type>Checkbox</type>
</CustomField>