force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageToleranceUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageToleranceUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preserve Usage Tolerance Units</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Usage Behaviour Rules</relationshipLabel>
    <relationshipName>UsageBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>