force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageUpperTolerance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageUpperTolerance__c</fullName>
    <label>Preserve Usage Upper Tolerance</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>