force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__PreserveUsageUpToMaximumUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreserveUsageUpToMaximumUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Usage Up To Maximum Usage</label>
    <type>Checkbox</type>
</CustomField>