force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__RemoveUsageOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemoveUsageOffset__c</fullName>
    <label>Remove Usage Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>