force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/fields/KimbleOne__RemoveUsageOnPeriodChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemoveUsageOnPeriodChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Usage On Period Change</label>
    <type>Checkbox</type>
</CustomField>