force-app/main/default/objects/KimbleOne__UsageBehaviourRule__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ResourcedActivityType__c</columns>
    <columns>KimbleOne__Description__c</columns>
    <columns>KimbleOne__DisplaySequence__c</columns>
    <columns>KimbleOne__EntrySpecification__c</columns>
    <columns>KimbleOne__IsFixedUsage__c</columns>
    <columns>KimbleOne__PreserveUsageOnActualisation__c</columns>
    <columns>KimbleOne__PreserveUsageOnResourceChange__c</columns>
    <columns>KimbleOne__PreserveUsageOnScheduleChange__c</columns>
    <columns>KimbleOne__PreserveUsageOnUnavailabilityChange__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>